--- a/project/package.json
+++ b/project/package.json
@@ -9,12 +9,13 @@
     "build": "strapi build",
     "strapi": "strapi"
   },
-  "devDependencies": {},
   "dependencies": {
-    "@strapi/strapi": "4.1.12",
-    "@strapi/plugin-users-permissions": "4.1.12",
+    "@_sh/strapi-plugin-ckeditor": "^1.1.0",
     "@strapi/plugin-i18n": "4.1.12",
-    "mysql": "2.18.1"
+    "@strapi/plugin-users-permissions": "4.1.12",
+    "@strapi/strapi": "4.1.12",
+    "mysql": "2.18.1",
+    "strapi-plugin-entity-relationship-chart": "^4.1.0"
   },
   "author": {
     "name": "A Strapi developer"
